fix sorting issue on safari fix header to top of view

--- a/src/index.css
+++ b/src/index.css
@@ -132,8 +132,22 @@ body,html,#root
 .header
 {
 	background-color: rgba(255,255,255,.2);
+	background-image: linear-gradient(to right, #eea2a2 0%, #bbc1bf 19%, #57c6e1 42%, #b49fda 79%, #7ac5d8 100%);
 	height:60px;
+	width:100%;
 	color:#fff;
+	position:fixed;
+	z-index: 2;
+}
+
+.sub-header
+{
+	background-color: rgba(255,255,255,.2);
+}
+
+.room-content
+{
+	padding-top:70px !important;
 }
 
 .btn-success .mdi-dots-horizontal:before, .hide
